# embed_resource

./: .gitignore  CMakeLists.txt  EmbedResource.hpp  Flags.hpp  README.md  Resource.h  config.h.in  embedresource.cpp  main.cpp
